--- a/SpikaEnterprise/res/layout/webrtc_fragment_call.xml
+++ b/SpikaEnterprise/res/layout/webrtc_fragment_call.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+    
     <TextView
         android:id="@+id/encoder_stat_call"
         android:layout_width="wrap_content"
@@ -40,24 +40,6 @@
         android:layout_alignParentLeft="true"
         android:background="@android:drawable/ic_menu_info_details"
         android:contentDescription="@string/toggle_debug" />
-
-    <LinearLayout
-        android:id="@+id/buttons_call_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
-        android:orientation="horizontal"
-        android:visibility="invisible" >
-
-        <ImageButton
-            android:id="@+id/button_call_scaling_mode"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/icon_door"
-            android:contentDescription="@string/disconnect_call" />
-    </LinearLayout>
 
     <!-- MY VIEWS -->
 
@@ -181,15 +163,14 @@
         android:layout_alignParentRight="true"
         android:layout_margin="10dp"
         android:background="@drawable/call_switch_camera" />
-
-    <com.clover.spika.enterprise.chat.views.RoundImageView
-        android:id="@+id/imageRing"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@null"
-        android:scaleType="centerCrop" />
+    
+    <Button
+        android:id="@+id/switchScaleType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/change_scale_type_selector" />
 
 </RelativeLayout>
