added webrtc boolean

--- a/SpikaEnterprise/res/layout/activity_other_profile.xml
+++ b/SpikaEnterprise/res/layout/activity_other_profile.xml
@@ -99,7 +99,9 @@
                 </FrameLayout>
             </RelativeLayout>
             
-            <LinearLayout android:orientation="horizontal"
+            <LinearLayout 
+                android:id="@+id/callControls"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="2"
