--- a/SpikaEnterprise/res/values/global_app_settings.xml
+++ b/SpikaEnterprise/res/values/global_app_settings.xml
@@ -37,5 +37,8 @@
 
     <!-- Enable Static Emoji -->
     <bool name="enable_static_emoji">true</bool>
+    
+    <!-- Enable WEB RETCi -->
+    <bool name="enable_web_rtc">true</bool>
 
 </resources>
