--- a/SpikaEnterprise/res/layout/activity_other_profile.xml
+++ b/SpikaEnterprise/res/layout/activity_other_profile.xml
@@ -10,10 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/menu_height"
         android:background="@color/default_blue" >
-        
-        <View android:layout_width="match_parent"
+
+        <View
+            android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#66000000"/>
+            android:background="#66000000" />
 
         <ImageButton
             android:id="@+id/goBack"
@@ -33,19 +34,18 @@
             android:text="@string/profile"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-        
+
         <ImageView
             android:id="@+id/showProfile"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:padding="10dp"
             android:background="@drawable/selector_transp_blue"
-            android:src="@drawable/icon_info"
+            android:padding="10dp"
             android:scaleType="fitCenter"
+            android:src="@drawable/icon_info"
             android:visibility="visible" />
-        
     </RelativeLayout>
 
     <ScrollView
@@ -98,64 +98,71 @@
                         android:visibility="visible" />
                 </FrameLayout>
             </RelativeLayout>
-            
-            <LinearLayout 
+
+            <LinearLayout
                 android:id="@+id/callControls"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
+                android:layout_below="@id/mainHolder"
                 android:layout_marginTop="30dp"
-                android:layout_below="@id/mainHolder">
-                
-                <LinearLayout android:orientation="vertical"
-                    android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2" >
+
+                <LinearLayout
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:layout_weight="1">
-                    
+                    android:orientation="vertical" >
+
                     <Button
                         android:id="@+id/btnVideoCall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/video_call_selector"/>
-                    
-                    <TextView android:id="@+id/videoLabel"
+                        android:background="@drawable/video_call_selector" />
+
+                    <TextView
+                        android:id="@+id/videoLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
                         android:text="@string/video"
                         android:textColor="@android:color/white"
-                        android:textSize="13sp"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"/>
-                    
+                        android:textSize="13sp" />
                 </LinearLayout>
-                
-                <LinearLayout android:orientation="vertical"
-                    android:layout_height="wrap_content"
+
+                <LinearLayout
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:layout_weight="1">
-                    
-                    <Button android:id="@+id/btnVoiceCall"
+                    android:orientation="vertical" >
+
+                    <Button
+                        android:id="@+id/btnVoiceCall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/voice_call_selector"/>
-                    
-                    <TextView android:id="@+id/voiceLabel"
-                        android:text="@string/call"
-                        android:textColor="@android:color/white"
-                        android:textSize="13sp"
-                        android:layout_marginTop="5dp"
+                        android:background="@drawable/voice_call_selector" />
+
+                    <TextView
+                        android:id="@+id/voiceLabel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"/>
-                    
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/call"
+                        android:textColor="@android:color/white"
+                        android:textSize="13sp" />
                 </LinearLayout>
-                
             </LinearLayout>
-
         </RelativeLayout>
     </ScrollView>
+
+    <View
+        android:layout_below="@id/actionBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/shadow_gradient" />
 
 </RelativeLayout>
