--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -116,7 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:autoLink="all"
-                        android:gravity="right"
+                        android:gravity="left"
                         android:linksClickable="true"
                         android:textColor="@android:color/white"
                         android:textColorLink="@color/light_light_gray"
