set admin as dialog instead activity

--- a/SpikaEnterprise/res/layout/dialog_select_category.xml
+++ b/SpikaEnterprise/res/layout/dialog_select_category.xml
@@ -43,7 +43,7 @@
             android:padding="10dp"
             android:scaleType="centerInside"
             android:src="@drawable/button_check"
-            android:visibility="visible" />
+            android:visibility="invisible" />
     </RelativeLayout>
 
     <FrameLayout
