export choose take video to strins

--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -225,7 +225,7 @@
                 android:layout_below="@id/firstLine"
                 android:background="@drawable/trans_to_gray"
                 android:gravity="center"
-                android:text="Choose/Take video"
+                android:text="@string/choose_take_video"
                 android:textColor="@color/default_blue"
                 android:textSize="20sp" />
 
