--- a/SpikaEnterprise/res/values/tags.xml
+++ b/SpikaEnterprise/res/values/tags.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- file upload -->
     <item name="tag_file_id" type="id" />
+    <item name="tag_is_encrypted" type="id" />
     <!-- locations -->
     <item name="tag_latitude" type="id" />
     <item name="tag_longitude" type="id" />
